experiment_output/error_log/nondex-scuhzq-java-config-mvc.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task404/wd/NonDex-plugin-test/github.com/scuhzq/java-config-mvc/src/main/java/com/nebula/config/DatabaseConfig.java:15: error: package javax.annotation does not exist
import javax.annotation.PostConstruct;
                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task404/wd/NonDex-plugin-test/github.com/scuhzq/java-config-mvc/src/main/java/com/nebula/config/AppConfig.java:13: error: package javax.annotation does not exist
import javax.annotation.PostConstruct;
                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task404/wd/NonDex-plugin-test/github.com/scuhzq/java-config-mvc/src/main/java/com/nebula/config/RedisConfig.java:15: error: package javax.annotation does not exist
import javax.annotation.PostConstruct;
                       ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task404/wd/NonDex-plugin-test/github.com/scuhzq/java-config-mvc/src/main/java/com/nebula/config/DatabaseConfig.java:26: error: cannot find symbol
	@PostConstruct
	 ^
  symbol:   class PostConstruct
  location: class DatabaseConfig
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task404/wd/NonDex-plugin-test/github.com/scuhzq/java-config-mvc/src/main/java/com/nebula/config/AppConfig.java:33: error: cannot find symbol
	@PostConstruct
	 ^
  symbol:   class PostConstruct
  location: class AppConfig
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task404/wd/NonDex-plugin-test/github.com/scuhzq/java-config-mvc/src/main/java/com/nebula/config/RedisConfig.java:31: error: cannot find symbol
	@PostConstruct
	 ^
  symbol:   class PostConstruct
  location: class RedisConfig
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 6s
